[tool.poetry]
name = "nonebot-plugin-apscheduler"
version = "0.1.4"
description = "APScheduler Support for NoneBot2"
authors = ["yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonebot/plugin-apscheduler"
repository = "https://github.com/nonebot/plugin-apscheduler"
documentation = "https://github.com/nonebot/plugin-apscheduler#readme"

[tool.poetry.dependencies]
python = "^3.7.3"
apscheduler = "^3.7.0"
nonebot2 = "^2.0.0-alpha.8"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
nonemoji = "^0.1.2"
pre-commit = "^2.19.0"
nonebot2 = { git = "https://github.com/nonebot/nonebot2.git" }

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
